tests/fail/nullptr_auto.stderr
error[E0415]: Cannot infer type from 'nullptr'; explicit type annotation required (e.g., 'auto *p: Type = ...')
 --> tests/fail/nullptr_auto.tk:16:15
   |
 16 |     auto nul ~p = null
   |               ^
